--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,21 @@ jobs:
         working-directory: ./example-app
         
     steps:
-      - run: ~/.local/bin/poetry run task test
-      - run: ~/.local/bin/poetry run task lint
-      - run: ~/.local/bin/poetry run task formatter
-      - run: ~/.local/bin/poetry run task security
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install
+
+    - name: Install Poetry Action
+      uses: snok/install-poetry@v1.3.4
+      
+    - run: ~/.local/bin/poetry run task test
+    - run: ~/.local/bin/poetry run task lint
+    - run: ~/.local/bin/poetry run task formatter
+    - run: ~/.local/bin/poetry run task security
