--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,10 +18,7 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
+      run: poetry install
 
     - name: Install Poetry Action
       uses: snok/install-poetry@v1.3.4
