--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,10 +19,10 @@ jobs:
         python-version: "3.10"
         
     - name: Install Poetry Action
-      uses: snok/install-poetry@v1.3.4
+    - uses: snok/install-poetry@v1.3.4
       
     - name: Install dependencies
-      run: poetry install --no-root --no-interaction
+    - run: poetry install --no-root --no-interaction
 
     - name: Run test  
     - run: ~/.local/bin/poetry run task test
