--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: "3.10"
         
     - name: Install Poetry Action
-    - uses: snok/install-poetry@v1.3.4
+      uses: snok/install-poetry@v1.3.4
       
     - name: Install dependencies
     - run: poetry install --no-root --no-interaction
