--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,16 +22,16 @@ jobs:
       uses: snok/install-poetry@v1.3.4
       
     - name: Install dependencies
-    - run: poetry install --no-root --no-interaction
+      run: poetry install --no-root --no-interaction
 
     - name: Run test  
-    - run: ~/.local/bin/poetry run task test
+      run: ~/.local/bin/poetry run task test
     
     - name: Run lint
-    - run: ~/.local/bin/poetry run task lint
+      run: ~/.local/bin/poetry run task lint
 
     - name: Run formatter
-    - run: ~/.local/bin/poetry run task formatter
+      run: ~/.local/bin/poetry run task formatter
 
     - name: Run security
-    - run: ~/.local/bin/poetry run task security
+      run: ~/.local/bin/poetry run task security
