--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,6 +14,7 @@ jobs:
     defaults:
       run:
         working-directory: ./example-app
+        shell: bash
         
     steps:
     - uses: actions/checkout@v3
