--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,9 @@ jobs:
       id: cached-poetry-dependencies
       uses: actions/cache@v3
       with:
-        path: /home/runner/.cache/pypoetry/virtualenvs
+        path: |
+          /home/runner/.cache/pypoetry/virtualenvs
+          %LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
 
   lint:
@@ -65,7 +67,9 @@ jobs:
       id: cached-poetry-dependencies
       uses: actions/cache@v3
       with:
-        path: /home/runner/.cache/pypoetry/virtualenvs
+        path: |
+          /home/runner/.cache/pypoetry/virtualenvs
+          %LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
         
     - name: Run lint
@@ -100,7 +104,9 @@ jobs:
       id: cached-poetry-dependencies
       uses: actions/cache@v3
       with:
-        path: /home/runner/.cache/pypoetry/virtualenvs
+        path: |
+          /home/runner/.cache/pypoetry/virtualenvs
+          %LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
         
     - name: Run formatter
@@ -135,7 +141,9 @@ jobs:
       id: cached-poetry-dependencies
       uses: actions/cache@v3
       with:
-        path: /home/runner/.cache/pypoetry/virtualenvs
+        path: |
+          /home/runner/.cache/pypoetry/virtualenvs
+          %LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
 
     - name: Run security
@@ -170,7 +178,9 @@ jobs:
       id: cached-poetry-dependencies
       uses: actions/cache@v3
       with:
-        path: /home/runner/.cache/pypoetry/virtualenvs
+        path: |
+          /home/runner/.cache/pypoetry/virtualenvs
+          %LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
 
     - name: Run test  
