--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          ~/home/runner/.cache/pypoetry/virtualenvs
+          ~/.cache/pypoetry/virtualenvs
           ~/%LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
 
@@ -66,7 +66,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          ~/home/runner/.cache/pypoetry/virtualenvs
+          ~/.cache/pypoetry/virtualenvs
           ~/%LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
         
@@ -100,7 +100,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          ~/home/runner/.cache/pypoetry/virtualenvs
+          ~/.cache/pypoetry/virtualenvs
           ~/%LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
         
@@ -137,7 +137,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          ~/home/runner/.cache/pypoetry/virtualenvs
+          ~/.cache/pypoetry/virtualenvs
           ~/%LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
 
@@ -171,7 +171,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          ~/home/runner/.cache/pypoetry/virtualenvs
+          ~/.cache/pypoetry/virtualenvs
           ~/%LOCALAPPDATA%/pypoetry/cache/virtualenvs
         key: ${{ runner.os }}-venv
 
