--- a/example-app/env.sample
+++ b/example-app/env.sample
@@ -8,8 +8,8 @@ SECRET_KEY=YOUR_SUPER_KEY
 
 # If DEBUG=False (production mode)
 DB_ENGINE=mysql
-DB_NAME=appseed_db
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASS=password
+DB_NAME=mzelezny_baza
+DB_HOST=dpg-clogbf946foc73c6g4k0-a
+DB_PORT=5432
+DB_USERNAME=mzelezny_baza_user
+DB_PASS=rf00O9pjhuHSkjbeAcD2YbayHIEBOZ1r
